<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:id="@+id/layout_tab"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_45"
    tools:showIn="@layout/activity_main">
    <!--android:background="@drawable/bg_main_tab"-->


    <TextView
        android:id="@+id/tv_main"
        android:enabled="true"
        android:text="@string/main"
        style="@style/tv_main_tab" />

    <TextView
        android:id="@+id/tv_notice"
        android:text="@string/notice_of_announcement"
        style="@style/tv_main_tab" />

    <TextView
        android:id="@+id/tv_class"
        android:text="@string/my_class"
        style="@style/tv_main_tab" />

    <TextView
        android:id="@+id/tv_class_class"
        android:text="@string/my_class_class"
        style="@style/tv_main_tab" />

    <TextView
        android:id="@+id/tv_elegant_demeanor"
        android:text="@string/campus_elegant_demeanor"
        style="@style/tv_main_tab" />

    <TextView
        android:id="@+id/tv_traditional_culture"
        android:text="@string/traditional_culture"
        style="@style/tv_main_tab" />

    <TextView
        android:id="@+id/tv_personal"
        android:text="@string/personal_center"
        style="@style/tv_main_tab" />
    <TextView
        android:id="@+id/tv_store"
        android:text="@string/stu_store"
        style="@style/tv_main_tab" />


</LinearLayout>
    <View
        android:id="@+id/indicator"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_below="@+id/layout_tab"
        android:layout_marginTop="-3dp"
        android:background="@color/font_FF00A9FF" />
</RelativeLayout>