<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/font_FF006599">

    <ImageView
        android:id="@+id/iv_setting"
        android:focusable="true"
        android:clickable="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/dp_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/dp_20"
        android:src="@drawable/bg_set_selector" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dp_66"
        android:layout_marginLeft="@dimen/dp_105"
        android:layout_marginRight="@dimen/dp_105"
        android:layout_marginTop="@dimen/dp_66"
        android:background="@color/font_FF0072AC">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_25">

            <ImageView
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:scaleType="centerCrop"
                android:src="@drawable/login" />

            <ScrollView
                android:background="@color/white"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="6">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dp_35"
                        android:layout_marginRight="@dimen/dp_35"
                        android:layout_marginTop="@dimen/dp_28"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login_account"
                            android:textColor="@color/font_FF162543"
                            android:textSize="@dimen/sp_16"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/et_account"
                            android:singleLine="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_77"
                            android:hint="@string/account_hint"
                            android:textColor="@color/black"
                            android:textColorHint="@color/font_FF999999"
                            android:textSize="@dimen/sp_14" />

                        <EditText
                            android:id="@+id/et_password"
                            android:singleLine="true"
                            android:inputType="textPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_30"
                            android:hint="@string/password_hint"
                            android:textColor="@color/black"
                            android:textColorHint="@color/font_FF999999"
                            android:textSize="@dimen/sp_14" />

                        <Button
                            android:id="@+id/tv_login"
                            android:background="@drawable/bg_bl_tv_info_selector_2"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp_40"
                            android:layout_marginTop="@dimen/dp_40"
                            android:layout_marginLeft="@dimen/dp_28"
                            android:layout_marginRight="@dimen/dp_28"
                            android:layout_marginBottom="@dimen/dp_28"
                            android:gravity="center"
                            android:text="@string/login"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp_16" />

                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>