<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/font_FF006599">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_15"
        android:background="@color/font_FF0072AC"
        android:orientation="vertical">

        <include layout="@layout/view_user" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_back"
                android:layout_marginTop="@dimen/dp_20"
                android:focusable="true"
                android:layout_width="@dimen/dp_65"
                android:layout_height="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_31"
                android:paddingLeft="@dimen/dp_11"
                android:background="@drawable/bg_back"
                android:drawableLeft="@drawable/back_white"
                android:gravity="center"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_head_use"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_100"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/tv_name_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_20"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_16" />


                <TextView
                    android:id="@+id/tv_logout"
                    android:focusable="true"
                    android:gravity="center"
                    android:layout_width="@dimen/dp_240"
                    android:layout_height="@dimen/dp_44"
                    android:layout_marginTop="@dimen/dp_30"
                    android:background="@drawable/bg_logout_selector"
                    android:text="@string/logout"
                    android:textColor="@drawable/text_color_logout"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    android:id="@+id/tv_switch_account"
                    android:gravity="center"
                    android:focusable="true"
                    android:layout_width="@dimen/dp_240"
                    android:layout_height="@dimen/dp_44"
                    android:layout_marginTop="@dimen/dp_20"
                    android:background="@drawable/bg_logout_selector"
                    android:text="@string/switch_account"
                    android:textColor="@drawable/text_color_logout"
                    android:textSize="@dimen/sp_16" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
