<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/person_md1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    tools:showIn="@layout/fragment_personal">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_15"
        android:focusable="false"
        android:padding="@dimen/dp_15"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/headLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:nextFocusLeft="@id/tv_base_info"
                android:nextFocusDown="@+id/personalLayout"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_head"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_gravity="center_vertical" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="@dimen/dp_10"
                                android:text=""
                                android:textColor="@color/white"
                                android:textSize="@dimen/sp_16" />

                            <ImageView
                                android:id="@+id/iv_sex"
                                android:layout_width="@dimen/dp_10"
                                android:layout_height="@dimen/dp_10"
                                android:layout_marginLeft="@dimen/dp_10"
                                android:scaleType="fitCenter" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/tv_sign"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/dp_10"
                            android:text=""
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp_16" />

                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                android:background="@color/font_FF2D0078" />

            <LinearLayout
                android:id="@+id/personalLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:nextFocusLeft="@id/tv_base_info"
                android:nextFocusUp="@+id/headLayout"
                android:nextFocusDown="@+id/schoolLayout"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginBottom="@dimen/dp_3"
                    android:text="@string/personal_info"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:layout_marginBottom="@dimen/dp_3">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="民族："
                        android:textColor="@color/font_CCFFFFFF"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:id="@+id/tv_nation"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_20"
                        android:text=""
                        android:textColor="@color/font_CCFFFFFF"
                        android:textSize="@dimen/sp_14" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:layout_marginBottom="@dimen/dp_3">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_20"
                        android:text="政治面貌："
                        android:textColor="@color/font_CCFFFFFF"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:id="@+id/tv_politicsStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_20"
                        android:text=""
                        android:textColor="@color/font_CCFFFFFF"
                        android:textSize="@dimen/sp_14" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:layout_marginBottom="@dimen/dp_3">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_20"
                        android:text="生日："
                        android:textColor="@color/font_CCFFFFFF"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:id="@+id/tv_birth"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_20"
                        android:text=""
                        android:textColor="@color/font_CCFFFFFF"
                        android:textSize="@dimen/sp_14" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:layout_marginBottom="@dimen/dp_3">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_20"
                        android:text="联系电话："
                        android:textColor="@color/font_CCFFFFFF"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:id="@+id/tv_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_20"
                        android:text=""
                        android:textColor="@color/font_CCFFFFFF"
                        android:textSize="@dimen/sp_14" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/schoolLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:nextFocusLeft="@id/tv_base_info"
                android:nextFocusUp="@+id/personalLayout"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginBottom="@dimen/dp_3"
                    android:text="@string/school_info"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:layout_marginBottom="@dimen/dp_3">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="所在学校："
                        android:textColor="@color/font_CCFFFFFF"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:id="@+id/tv_school"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_20"
                        android:text=""
                        android:textColor="@color/font_CCFFFFFF"
                        android:textSize="@dimen/sp_14" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_3"
                    android:layout_marginBottom="@dimen/dp_3">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_20"
                        android:text="班级："
                        android:textColor="@color/font_CCFFFFFF"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:id="@+id/tv_class"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_20"
                        android:text=""
                        android:textColor="@color/font_CCFFFFFF"
                        android:textSize="@dimen/sp_14" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginBottom="@dimen/dp_3"
                    android:text="@string/my_teacher"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView_md1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:focusable="false"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>